--- a/decision_tree_post_prunning.ipynb
+++ b/decision_tree_post_prunning.ipynb
@@ -1295,7 +1295,7 @@
     }
    ],
    "source": [
-    "print(classification_report(y_pred,y_test)"
+    "print(classification_report(y_pred,y_test))"
    ]
   },
   {
